--- a/helper/makefile
+++ b/helper/makefile
@@ -1,51 +1,51 @@
-help : 
-	@echo "This is the makefile of ANSYS-Mode $(VERSION) using $(EMACS_VERSION)"
+ help : 
+	@echo "This is the makefile of APDL-Mode $(VERSION) using $(EMACS_VERSION)"
 	@echo "make MODE = A-M package files + tutorials"
 	@echo "make EMACS_SRC = Emacs sources + A-M package files + tutorials"
 	@echo "make EMACS = Windoze version of emacs with pre-configured ANSYS-Mode"
 	@echo "make CONTI = Archive for my company"
 	@echo "make HTML = update the html documentation"
-	@echo "make TAGS = make the goddam tags!"
+	@echo "make TAGS = make the etags"
 	@echo "make ELC = compile the el files"
 	@echo "make ALL = MODE + EMACS + EMACS_SRC + TAGS"
 	@echo "make CLEAN = clean the elc files"
 	@echo "make TAG_RELEASE = "
-	@echo ""
+	@echo "make PACK = Emacs tar package"
+	@echo "make [help]  = this help"
+	@echo "make -k = --keep-going, even if some targets can't be made.."
+
+# Semantic versioning: MA.Mi.Pa
+APDL_MAJOR := 20
+APDL_MINOR := 1
+APDL_PATCH := 0
+
 
 # EMACS_VER needed for Emacs' windows installaion tree
-EMACS_VER := 24.5
+EMACS_VER := 26.3
 EMACS_VERSION := emacs-$(EMACS_VER)
 
 # complete package names are comprised of
-# ansys-mode-$(ANSYS_MAJOR).$(ANSYS_MINOR).$(MODE_VERSION)
-# tutorials: A-M_xxx
-ANSYS_MAJOR := 16
-ANSYS_MINOR := 2
 
-# this is the current ANSYS-Mode version suffix
-MODE_VERSION := test1
-# for consistency:
-#MODE_VERSION := test1
-#MODE_VERSION := beta1
-#MODE_VERSION := freeze1
-#MODE_VERSION := rc1
-#MODE_VERSION := 1
+# apdl-mode-$(APDL_MAJOR).$(ANSYS_MINOR).$(MODE_VERSION)
+# tutorials: A-M_xxx
 
 ##################################################
 
 HOSTNAME := $(shell hostname)
 DIR := $(shell pwd)
+# the sources dir
+S_DIR := "/home/dieter/ansys-mode/"
 
 # use make in the "tags" release directories
 #RELEASE := $(shell $$($(DIR)))
 
-ifeq ($(HOSTNAME),urmel)
- EMACS_DIR := /usr/local/src/
+ifeq ($(HOSTNAME),ping)
+ EMACS_DIR := /usr/local/src/emacs/
 else
  EMACS_DIR := /appl/emacs/
 endif
 
-VERSION := $(ANSYS_MAJOR)$(ANSYS_MINOR)-$(MODE_VERSION)
+VERSION := $(APDL_MAJOR).$(APDL_MINOR).$(APDL_PATCH)
 
 EMACS_PACKAGE := $(EMACS_VERSION)-bin-i686-mingw32.zip
 # in the ftp.gnu.org/gnu folder is the gnu-keyring.gpg
@@ -74,31 +74,31 @@ X11_EXE := $(X11_FILES:.cpp=)
 
 .PHONEY : TEST
 TEST : 
-	@echo $(X11_EXE)
+	@echo $(VERSION)
 
 .PHONEY : ../X11
 X11 : $(X11_FILES)
 	$(MAKE) -C X11
 
-PACKAGE := ansys-mode-$(VERSION).tar.xz
+PACKAGE := apdl-mode-$(VERSION).tar
 
 # necessary el files
-EL_FILES := ../ansys-config.el ../ansys-mode.el ../ansys-keyword.el \
-	../ansys-initialise.el ../ansys-template.el ../ansys-process.el
+EL_FILES := ../apdl-config.el ../apdl-mode.el ../apdl-keyword.el ../apdl-mode-pkg.el \
+	../apdl-initialise.el ../apdl-template.el ../apdl-process.el
 # fontification.el is not included since it is not necessary for running A-M
 
-../ansys-config.el : ../ansys-config.org
+../apdl-config.el : ../apdl-config.org
 	$(EMACS_EXE) --batch --file $< \
-	  --execute "(add-to-list 'load-path \"~/a-m\")" \
-	  --load "ansys-mode.el" --execute "(org-babel-tangle)"
+	  --execute "(add-to-list 'load-path \"~/ansys-mode\")" \
+	  --load "apdl-mode.el" --execute "(org-babel-tangle)"
 
 ELC_FILES := $(EL_FILES:.el=.elc)
 
-# compiled files
+# compile Elisp files
 .PHONEY : ELC
 ELC : $(ELC_FILES)
 
-FILES := ../LICENSE.org ../README.org ../TODO.org ../NEWS.org ../INSTALLATION.org
+FILES := ../LICENSE.org ../README ../README.org ../TODO.org ../NEWS.org ../INSTALLATION.org
 HELPER_FILES := ../doc/example.mac ../doc/example.anf ../doc/example.dat 
 
 #	 ../doc/APDL_tutorial.ans
@@ -108,7 +108,7 @@ HELPER_FILES := ../doc/example.mac ../doc/example.anf ../doc/example.dat
 # 	   $< -eval "(require 'ob-tangle)" -eval "(org-babel-tangle nil "APDL_tutorial.ans")"
 
 WORK_FILES := ../LICENSE.org ../README.org ../TODO.org ../NEWS.org \
-		 example.mac example.anf example.dat tools/ansys-mode/README.Conti
+		 example.mac example.anf example.dat # tools/ansys-mode/README.Conti
 
 WORK_EL_FILES := $(EL_FILES)
 
@@ -135,66 +135,71 @@ X11 := \
 ../X11/xSendReturn.cpp \
 
 
-PACKAGE_FILES :=  $(X11) $(FILES) $(HELPER_FILES) $(EL_FILES) $(MATLIB) $(TUTORIALS) default.el
+# PACKAGE_FILES :=  $(X11) $(FILES) $(HELPER_FILES) $(EL_FILES) $(MATLIB) $(TUTORIALS) default.el
+PACKAGE_FILES :=  $(FILES) $(HELPER_FILES) $(EL_FILES) $(MATLIB) 
 
 default.el : makefile
-	@echo ";;; Automatically created from ANSYS-mode-$(VERSION)" > $@
+	@echo ";;; Automatically created from APDL-Mode-$(VERSION)" > $@
 	@echo "(let* ((dir (file-name-directory load-file-name))" >> $@
-	@echo "       (file (concat dir \"/ansys-mode-$(VERSION)/ansys-config.el\")))" >> $@
+	@echo "       (file (concat dir \"/apdl-mode-$(VERSION)/apdl-config.el\")))" >> $@
 	@echo "  (when (file-readable-p file) (load-file file)))" >> $@
 
-$(PACKAGE) : $(PACKAGE_FILES) makefile
-	@echo "Packaging $@ ..."
+P_DIR := apdl-mode-$(VERSION)
+
+$(PACKAGE) : $(PACKAGE_FILES)  makefile
+	@echo "Packaging GNU-Emacs package $@ ..."
 	@echo
-	@test -d ansys-mode-$(VERSION) || \
-	    mkdir ansys-mode-$(VERSION)
-	@cp -a $(FILES) ansys-mode-$(VERSION)
-	@cp -a $(EL_FILES) ansys-mode-$(VERSION)
-	@test -d ansys-mode-$(VERSION)/doc || \
-	    mkdir ansys-mode-$(VERSION)/doc
-	@cp -a $(TUTORIALS) ansys-mode-$(VERSION)/doc
-	@cp -a $(HELPER_FILES) ansys-mode-$(VERSION)/doc
-	@test -d ansys-mode-$(VERSION)/helper || \
-	    mkdir ansys-mode-$(VERSION)/helper
-	@test -d ansys-mode-$(VERSION)/matlib || \
-	    mkdir ansys-mode-$(VERSION)/matlib
-	@test -d ansys-mode-$(VERSION)/X11 || \
-	    mkdir ansys-mode-$(VERSION)/X11
-	@cp -rf $(MATLIB) ansys-mode-$(VERSION)
-	@tar -cJvf $@ ansys-mode-$(VERSION) default.el
+	@test -d $(P_DIR) || \
+	    mkdir $(P_DIR)
+	@cp -a $(FILES) $(P_DIR)
+	@cp -a $(EL_FILES) $(P_DIR)
+	@test -d $(P_DIR)/doc || \
+	    mkdir $(P_DIR)/doc
+#	@cp -a $(TUTORIALS) P_DIR/doc
+	@cp -a $(HELPER_FILES) $(P_DIR)/doc
+	@test -d $(P_DIR)/helper || \
+	    mkdir $(P_DIR)/helper
+	@test -d $(P_DIR)/matlib || \
+	    mkdir $(P_DIR)/matlib
+# @test -d P_DIR/X11 || \
+#     mkdir P_DIR/X11
+	@cp -rf $(MATLIB) $(P_DIR)
+	tar -cf $@ $(P_DIR) # ../apdl-mode-readme.txt # default.el
 	@echo
 	@echo "... $@ done."
 	@echo "------------------------------"
 
+
 # MODE: this is the Ansys mode "installation" package
 # the sources are built from GitHub automatically when tagged
-.PHONEY : MODE
-MODE : $(PACKAGE)
+.PHONEY : PACK
+PACK : $(PACKAGE)
 
 .PHONEY : CONTI
 CONTI : A-M-$(VERSION).tar.xz
 
-A-M-$(VERSION).tar.xz : $(PACKAGE) tools/ansys-mode/README.Conti tools/bin/A-M-$(VERSION).sh \
+A-M-$(VERSION).tar.xz : $(PACKAGE) \ # tools/apdl-mode/README.Conti
+	tools/bin/A-M-$(VERSION).sh \
 			makefile $(X11)
-	mv tools/ansys-mode/README.Conti tools/
-	rm -fr tools/ansys-mode/*
-	mv tools/README.Conti tools/ansys-mode/
-	@test -d tools/ansys-mode/ansys-mode-$(VERSION) || \
-	    mkdir tools/ansys-mode/ansys-mode-$(VERSION)
+#	mv tools/apdl-mode/README.Conti tools/
+	rm -fr tools/apdl-mode/*
+#	mv tools/README.Conti tools/apdl-mode/
+	@test -d tools/apdl-mode/apdl-mode-$(VERSION) || \
+	    mkdir tools/apdl-mode/apdl-mode-$(VERSION)
 	@echo "syncing.."
 	cd ..;rsync -aR --exclude '*~' $(WORK_EL_FILES:../%=%) $(FILES:../%=%) \
 	    $(TUTORIALS:../%=%) X11/ \
 	    $(MATLIB:../%=%) $(HELPER_FILES:../%=%) $(X11_EXE:../%=%)\
-		helper/tools/ansys-mode/ansys-mode-$(VERSION)
+		helper/tools/apdl-mode/apdl-mode-$(VERSION)
 	@pwd
-	cd ./tools/ansys-mode; ln -sf ansys-mode-$(VERSION) current
+	cd ./tools/apdl-mode; ln -sf apdl-mode-$(VERSION) current
 	tar -cJvf $@ --group HPCUser_1 tools
 
 tools/bin/A-M-$(VERSION).sh : makefile
 	@test -d tools/bin || mkdir tools/bin
 	@echo "#!/bin/sh " > $@
-	@echo "# Automatically created from ANSYS-mode-$(VERSION)" >> $@
-	@echo "emacs -l /appl/tools/ansys-mode/ansys-mode-$(VERSION)/ansys-config.el \$$*" >> $@
+	@echo "# Automatically created from APDL-Mode-$(VERSION)" >> $@
+	@echo "emacs -l /appl/tools/apdl-mode/apdl-mode-$(VERSION)/ansys-config.el \$$*" >> $@
 	chmod +x $@
 
 .PHONEY : EMACS_SRC
@@ -260,15 +265,18 @@ $(EMACS_EXE) : $(EMACS_SOURCE)
 
 ../doc/A-M_introductory_tutorial.pdf : ../doc/A-M_introductory_tutorial.org
 	$(EMACS_EXE) --batch --file $< \
-	--load "~/a-m/helper/export.el" \
+	--load "~/ansys-mode/helper/export.el" \
 	--execute  "(org-beamer-export-to-pdf)"
 
 ../ansys-keyword.el : fontification.el ansys_dynprompt.txt ansys_elements.txt ansys_parametric_functions.txt ansys_get_functions.txt ansys_keywords.txt
 	$(EMACS_EXE) --batch --load $<
 	ln -f ansys-keyword.el ..
 
+# this is for compiling Elisp files, we need to set the load-path for a pristine Emacs
+# -f means --funcall
+# -L means --directory prepend to load-path
 %.elc : %.el
-	$(EMACS_EXE) --batch -f batch-byte-compile $<
+	$(EMACS_EXE) --batch -L $(S_DIR) -f batch-byte-compile $<
 
 # This is Emacs for Windows packaged with Ansys mode
 .PHONEY : EMACS
@@ -304,7 +312,7 @@ $(EMACS_PACKAGE) :  $(EMACS_PACKAGE_SIG)
 	gpg $(EMACS_PACKAGE_SIG)
 
 # need the org files for the versioning string
-TAGS_FILES := makefile $(EL_FILES) $(FILES) $(TUTORIAL_SOURCES) fontification.el tools/ansys-mode/README.Conti ../ansys-config.org
+TAGS_FILES := makefile $(EL_FILES) $(FILES) $(TUTORIAL_SOURCES) fontification.el ../apdl-config.org
 
 TAGS : $(TAGS_FILES)
 	etags $(TAGS_FILES)
